sistemo roba del sito

--- a/pages/accedi.html
+++ b/pages/accedi.html
@@ -9,7 +9,7 @@
     <meta name='language' content='IT'>
     <meta name='author' content='Davide Simone Angelo Fucci Samuele Molinini'>
     <!--Titolo pagina-->
-    <title>ClerCard</title>
+    <title>Unicredit Contpage</title>
     <!---->
     <link rel="icon" type="image/x-icon" href="./immagini/logounicredit.png">
     <!--Icone di bootstrap-->
