--- a/pages/infocard.html
+++ b/pages/infocard.html
@@ -9,7 +9,7 @@
     <meta name='language' content='IT'>
     <meta name='author' content='Davide Simone Angelo Fucci Samuele Molinini'>
     <!--Titolo pagina-->
-    <title>ClerCard</title>
+    <title>Unicredit Contpage</title>
     <!---->
     <link rel="icon" type="image/x-icon" href="./immagini/logounicredit.png">
     <!--Icone di bootstrap-->
@@ -35,7 +35,7 @@
 
                 </a>
                 <!--Titolo-->
-                <h4 class="mb-0">ClerCard</h4>
+                <h4 class="mb-0">Unicredit Contpage</h4>
                 <a href="infoProfilo.html" class="d-block link-body-emphasis text-decoration-none"
                     aria-expanded="false">
                     <i class="bi bi-person-circle" style="font-size:1.5em"></i> <!--iCONA DEL PROFILO-->
