--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name='description' content='Sito Web per StartupYourLife'> <!--Descrizione del sito-->
     <meta name='language' content='IT'> <!--Linguaggio della pagina-->
     <meta name='author' content='Davide Simone Angelo Fucci Samuele Molinini'> <!--Autori della pagina-->
-    <title>ClerCard</title> <!--Titolo pagina-->
+    <title>Unicredit Contpage</title> <!--Titolo pagina-->
     <link rel="icon" type="image/x-icon" href="./pages/immagini/logounicredit.png"> <!--Icona in alto-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> <!--Icone di bootstrap preimpostate e prese dal sito Bootstrap-->
    
@@ -25,8 +25,8 @@
             <!--
                 Flex in colonna per gestire ogni elemento con la sua singola riga
             -->
-            <h1 class="display-1 mb-1">ClerCard</h1> <!--Titolo con grandezza 1 e margine sottostante (margin-bottom)-->
-            <h3 class="display-5 mb-5">Usa e studia con noi!</h3> <!--Sottotitolo con grandezza 5 e margine sottostante (margin-bottom)-->
+            <h1 class="display-1 mb-1">Unicredit Contpage</h1> <!--Titolo con grandezza 1 e margine sottostante (margin-bottom)-->
+            <h3 class="display-5 mb-5">Gestisci i tuoi conti con Noi!</h3> <!--Sottotitolo con grandezza 5 e margine sottostante (margin-bottom)-->
             <div> <!--scatola vuota per gestire entrambi i pulsanti in una singola riga-->
                 <a class="btn btn-primary btn-l m-2" href="./pages/registrati.html">Registrati</a>
                 <a class="btn btn-primary btn-l m-2" href="./pages/accedi.html">Accedi</a>
