--- a/pages/card.html
+++ b/pages/card.html
@@ -98,7 +98,7 @@
 <div align="center">
     <img src="./immagini/clercard.jpg"  class="rounded mx-auto d-block" width=750px>
 </div>
-  
+  <h2>togliere pk idea di rizzi </h2>
 
     <!--JQuery -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
