--- a/pages/listacard.html
+++ b/pages/listacard.html
@@ -97,6 +97,7 @@
     </nav>
 
     <h3 align="center">Le tue carte:</h3>
+    <h2>togliere pk idea di rizzi </h2>
     <table border="1" class="table" id="tabellaCarte">
         <tr border="1" id="Carta1">
         <td border="1"><h3 id="nCarta">Carta 1</h3></td>
