quasi finito sito

--- a/pages/appmobile.html
+++ b/pages/appmobile.html
@@ -8,7 +8,7 @@
     <meta name='language' content='IT'>
     <meta name='author' content='Davide Simone Angelo Fucci Samuele Molinini'>
     <!--Titolo pagina-->
-    <title>Unicredit Contpage</title>
+    <title>S.A.R.A.</title>
     <!---->
     <link rel="icon" type="image/x-icon" href="./immagini/logounicredit.png">
     <!--Icone di bootstrap-->
@@ -36,7 +36,7 @@
 
                 </a>
                 <!--Titolo-->
-                <h4 class="mb-0">Unicredit Contpage</h4>
+                <h4 class="mb-0">S.A.R.A.</h4>
                 <a href="infoProfilo.html" class="d-block link-body-emphasis text-decoration-none"
                     aria-expanded="false">
                     <i class="bi bi-person-circle" style="font-size:1.5em"></i> <!--iCONA DEL PROFILO-->
@@ -89,11 +89,17 @@
                     <li class="nav-item">
                         <a class="nav-link" href="assistenza.html">Assistenza</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="promozioni.html">Promozioni</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="azioni.html">Azioni</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <h3 align="center" font color="blue"><b>Scarica l’applicazione clercard</b></h3>
+    <h3 align="center" font color="blue"><b>Scarica l’applicazione SaraWallet</b></h3>
     <div align="center"><img   src="./immagini/logocard.png"></div><br/>
     <div class="d-flex flex-row justify-content-center gap-2">
         <a href="downloadapp.html" target="_self"> 
