--- a/pages/operazioni.html
+++ b/pages/operazioni.html
@@ -9,7 +9,7 @@
     <meta name='language' content='IT'>
     <meta name='author' content='Davide Simone Angelo Fucci Samuele Molinini'>
     <!--Titolo pagina-->
-    <title>Unicredit Contpage</title>
+    <title>S.A.R.A.</title>
     <!---->
     <link rel="icon" type="image/x-icon" href="./immagini/logounicredit.png">
     <!--Icone di bootstrap-->
@@ -45,7 +45,7 @@
 
                 </a>
                 <!--Titolo-->
-                <h4 class="mb-0">Unicredit Contpage</h4>
+                <h4 class="mb-0">S.A.R.A.</h4>
                 <a href="infoProfilo.html" class="d-block link-body-emphasis text-decoration-none"
                     aria-expanded="false">
                     <i class="bi bi-person-circle" style="font-size:1.5em"></i> <!--iCONA DEL PROFILO-->
@@ -97,6 +97,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="assistenza.html">Assistenza</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="promozioni.html">Promozioni</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="azioni.html">Azioni</a>
                     </li>
                 </ul>
             </div>
