--- a/pages/card.html
+++ b/pages/card.html
@@ -9,7 +9,7 @@
     <meta name='language' content='IT'>
     <meta name='author' content='Davide Simone Angelo Fucci Samuele Molinini'>
     <!--Titolo pagina-->
-    <title>Unicredit Contpage</title>
+    <title>S.A.R.A.</title>
     <!---->
     <link rel="icon" type="image/x-icon" href="./immagini/logounicredit.png">
     <!--Icone di bootstrap-->
@@ -37,7 +37,7 @@
 
                 </a>
                 <!--Titolo-->
-                <h4 class="mb-0">Unicredit Contpage</h4>
+                <h4 class="mb-0">S.A.R.A.</h4>
                 <a href="infoProfilo.html" class="d-block link-body-emphasis text-decoration-none"
                     aria-expanded="false">
                     <i class="bi bi-person-circle" style="font-size:1.5em"></i> <!--iCONA DEL PROFILO-->
@@ -90,15 +90,21 @@
                     <li class="nav-item">
                         <a class="nav-link" href="assistenza.html">Assistenza</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="promozioni.html">Promozioni</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="azioni.html">Azioni</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 <h3 align="center">ECCO LA TUA CARD</h3>
 <div align="center">
-    <img src="./immagini/clercard.jpg"  class="rounded mx-auto d-block" width=750px>
+    <img src="./immagini/Carta.png"  class="rounded mx-auto d-block" width=750px>
 </div>
-  <h2>togliere pk idea di rizzi </h2>
+
 
     <!--JQuery -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
