--- a/pages/registrati.html
+++ b/pages/registrati.html
@@ -8,7 +8,7 @@
     <meta name='language' content='IT'>
     <meta name='author' content='Davide Simone Angelo Fucci Samuele Molinini'>
     <!--Titolo pagina-->
-    <title>Unicredit Contpage</title>
+    <title>S.A.R.A.-Registrati</title>
     <!---->
     <link rel="icon" type="image/x-icon" href="./immagini/logounicredit.png">
     <!--Icone di bootstrap-->
