--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8"> <!--Codifica Unicode per pagine Web-->
     <meta name='description' content='Sito Web per StartupYourLife'> <!--Descrizione del sito-->
     <meta name='language' content='IT'> <!--Linguaggio della pagina-->
-    <meta name='author' content='Davide Simone Angelo Fucci Samuele Molinini'> <!--Autori della pagina-->
+    <meta name='author' content='Davide Simone Angelo Fucci Mattia Malcangi Antonio Di Bari Antonio Balducci'> <!--Autori della pagina-->
     <title>S.A.R.A.</title> <!--Titolo pagina-->
     <link rel="icon" type="image/x-icon" href="./pages/immagini/logounicredit.png"> <!--Icona in alto-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> <!--Icone di bootstrap preimpostate e prese dal sito Bootstrap-->
