--- a/pages/appmobile.html
+++ b/pages/appmobile.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name='description' content='Sito Web per StartupYourLife'>
     <meta name='language' content='IT'>
-    <meta name='author' content='Davide Simone Angelo Fucci Samuele Molinini'>
+    <meta name='author' content='Davide Simone Angelo Fucci Mattia Malcangi Antonio Di Bari Antonio Balducci'> <!--Autori della pagina-->
     <!--Titolo pagina-->
     <title>S.A.R.A.</title>
     <!---->
@@ -98,7 +98,7 @@
         </div>
     </nav>
     <h3 align="center" font color="blue"><b>Scarica l’applicazione SaraWallet</b></h3>
-    <div align="center"><img   src="./immagini/logocard.png"></div><br/>
+    <div align="center"><img src="./immagini/logosara.jpeg" width="20%"></div><br/>
     <div class="d-flex flex-row justify-content-center gap-2">
         <a href="downloadapp.html" target="_self"> 
             <img src="./immagini/scaricaIOS.svg"  style="height:20vw;" border="0" 260&nbsp> 
