--- a/pages/card.html
+++ b/pages/card.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name='description' content='Sito Web per StartupYourLife'>
     <meta name='language' content='IT'>
-    <meta name='author' content='Davide Simone Angelo Fucci Samuele Molinini'>
+    <meta name='author' content='Davide Simone Angelo Fucci Mattia Malcangi Antonio Di Bari Antonio Balducci'> <!--Autori della pagina-->
     <!--Titolo pagina-->
     <title>S.A.R.A.</title>
     <!---->
@@ -98,7 +98,7 @@
             </div>
         </div>
     </nav>
-<h3 align="center">ECCO LA TUA CARD</h3>
+<h3 align="center">ECCO LA TUA CARD:</h3>
 <div align="center">
     <img src="./immagini/Carta.png"  class="rounded mx-auto d-block" width=750px>
 </div>
