--- a/pages/downloadapp.html
+++ b/pages/downloadapp.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name='description' content='Sito Web per StartupYourLife'>
     <meta name='language' content='IT'>
-    <meta name='author' content='Davide Simone Angelo Fucci Samuele Molinini'>
+    <meta name='author' content='Davide Simone Angelo Fucci Mattia Malcangi Antonio Di Bari Antonio Balducci'> <!--Autori della pagina-->
     <!--Titolo pagina-->
     <title>S.A.R.A.</title>
     <!---->
@@ -101,7 +101,6 @@
           <span class="sr-only"></span>
         </div>
         <span class="display-4 text-primary">Download In Corso....</span>
-        <img src="./immagini/clessidra.gif" width="3.5%" loop=infinite />
     </div>
     
  <!--Bootstrap Script-->
