--- a/pages/promozioni.html
+++ b/pages/promozioni.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name='description' content='Sito Web per StartupYourLife'>
     <meta name='language' content='IT'>
-    <meta name='author' content='Davide Simone Angelo Fucci Samuele Molinini'>
+    <meta name='author' content='Davide Simone Angelo Fucci Mattia Malcangi Antonio Di Bari Antonio Balducci'> <!--Autori della pagina-->
     <!--Titolo pagina-->
     <title>S.A.R.A.</title>
     <!---->
@@ -111,13 +111,19 @@
     
            <table border="0" cellpadding="2%" cellspacing="5%" align="center" width="100%">
                 <tr>
-                    <td width="33.3%"><a href="#"><img src="./immagini/walters.png"></a></td>
-                    <td width="33.3%"><a href="#"><img src="./immagini/bigbang.png"></a></td>
-                    <td width="33.3%"><a href="#"><img src="./immagini/mcdonald.png"></a></td>
-                </tr><tr>
-                    <td width="33.3%"><a href="#"><img src="./immagini/volver.png"></a></td>
-                    <td width="33.3%"><a href="#"><img src="./immagini/celero.png"></a></td>
-                    <td width="33.3%"><a href="#"><img src="./immagini/veronero.png"></a></td>
+                    <td width="33.3%"><img src="./immagini/walters.png"></td>
+                    <td width="33.3%"><img src="./immagini/bigbang.png"></td>
+                    <td width="33.3%">Ricerca di altre promozioni<img src="./immagini/clessidra.gif" width="3.5%" loop=infinite /></td>
+                </tr>
+                <tr>
+                    <td width="33.3%"><img src="./immagini/volver.png"></td>
+                    <td width="33.3%">Ricerca di altre promozioni<img src="./immagini/clessidra.gif" width="3.5%" loop=infinite /></td>
+                    <td width="33.3%"><img src="./immagini/veronero.png"></td>
+                </tr>
+                <tr>
+                    <td width="33.3%">Ricerca di altre promozioni<img src="./immagini/clessidra.gif" width="3.5%" loop=infinite /></td>
+                    <td width="33.3%"><img src="./immagini/celero.png"></td>
+                    <td width="33.3%"><img src="./immagini/mcdonald.png"></td>
                 </tr>
            </table>
 </main>
