--- a/pages/registrati.html
+++ b/pages/registrati.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name='description' content='Sito Web per StartupYourLife'>
     <meta name='language' content='IT'>
-    <meta name='author' content='Davide Simone Angelo Fucci Samuele Molinini'>
+    <meta name='author' content='Davide Simone Angelo Fucci Mattia Malcangi Antonio Di Bari Antonio Balducci'> <!--Autori della pagina-->
     <!--Titolo pagina-->
     <title>S.A.R.A.-Registrati</title>
     <!---->
