--- a/pages/listacard.html
+++ b/pages/listacard.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name='description' content='Sito Web per StartupYourLife'>
     <meta name='language' content='IT'>
-    <meta name='author' content='Davide Simone Angelo Fucci Samuele Molinini'>
+    <meta name='author' content='Davide Simone Angelo Fucci Mattia Malcangi Antonio Di Bari Antonio Balducci'> <!--Autori della pagina-->
     <!--Titolo pagina-->
     <title>S.A.R.A.</title>
     <!---->
@@ -101,7 +101,6 @@
     </nav>
 
     <h3 align="center">Le tue carte:</h3>
-    <h2>togliere pk idea di rizzi </h2>
     <table border="1" class="table" id="tabellaCarte">
         <tr border="1" id="Carta1">
         <td border="1"><h3 id="nCarta">Carta 1</h3></td>
