Aggiunta compravendita azioni

--- a/pages/azioni.html
+++ b/pages/azioni.html
@@ -7,7 +7,8 @@
     <meta charset="UTF-8">
     <meta name='description' content='Sito Web per StartupYourLife'>
     <meta name='language' content='IT'>
-    <meta name='author' content='Davide Simone Angelo Fucci Mattia Malcangi Antonio Di Bari Antonio Balducci'> <!--Autori della pagina-->
+    <meta name='author' content='Davide Simone Angelo Fucci Mattia Malcangi Antonio Di Bari Antonio Balducci'>
+    <!--Autori della pagina-->
     <!--Titolo pagina-->
     <title>S.A.R.A.</title>
     <!---->
@@ -88,13 +89,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="card.html">La tua card</a>
                     </li>
-                   
+
                     <li class="nav-item">
                         <a class="nav-link" href="listacard.html">Le tue carte</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="assistenza.html">Assistenza</a>
-                    </li>  
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="promozioni.html">Promozioni</a>
                     </li>
@@ -107,20 +108,21 @@
     </nav>
     <main align="center">
 
-            <font align="center" color="#00ff7f" size="30%">Azioni disponibili:</font><br/><br/>
-    
-           <table border="0" cellpadding="2%" cellspacing="5%" align="center" width="100%">
-                <tr>
-                    <td width="33.3%"><a href="#"><img src="./immagini/ferrari.png"></a></td>
-                    <td width="33.3%"><a href="#"><img src="./immagini/unicredit.png"></a></td>
-                    <td width="33.3%"><a href="#"><img src="./immagini/cisco.png"></a></td>
-                </tr><tr>
-                    <td width="33.3%"><a href="#"><img src="./immagini/moncler.png"></a></td>
-                    <td width="33.3%"><a href="#"><img src="./immagini/enel.png"></a></td>
-                    <td width="33.3%"><a href="#"><img src="./immagini/apple.png"></a></td>
-                </tr>
-           </table>
-</main>
+        <font align="center" color="#00ff7f" size="30%">Azioni disponibili:</font><br /><br />
+
+        <table border="0" cellpadding="2%" cellspacing="5%" align="center" width="100%">
+            <tr>
+                <td width="33.3%"><a href="./azioni/ferrari.html"><img src="./immagini/ferrari.png"></a></td>
+                <td width="33.3%"><a href="./azioni/unicredit.html"><img src="./immagini/unicredit.png"></a></td>
+                <td width="33.3%"><a href="./azioni/cisco.html"><img src="./immagini/cisco.png"></a></td>
+            </tr>
+            <tr>
+                <td width="33.3%"><a href="./azioni/moncler.html"><img src="./immagini/moncler.png"></a></td>
+                <td width="33.3%"><a href="./azioni/enel.html"><img src="./immagini/enel.png"></a></td>
+                <td width="33.3%"><a href="./azioni/apple.html"><img src="./immagini/apple.png"></a></td>
+            </tr>
+        </table>
+    </main>
 
 
     <!--Bootstrap Script-->
