--- a/pages/statistiche.html
+++ b/pages/statistiche.html
@@ -174,20 +174,20 @@
         (() => {
             'use strict'
 
-            // Graphs
+            // Codice per creare il grafico
             const ctx = document.getElementById('myChart')
-            // eslint-disable-next-line no-unused-vars
-            const myChart = new Chart(ctx, {
+
+            const myChart = new Chart(ctx, { //oggetto di tipo chart
                 type: 'line',
                 data: {
-                    labels: [
+                    labels: [ //ascisse
                         'Gennaio',
                         'Febbraio',
                         'Marzo',
                         'Aprile',
                         'Maggio',
                     ],
-                    datasets: [{
+                    datasets: [{ //ordinate
                         data: [
                             1100,
                             1200,
@@ -202,6 +202,7 @@
                         pointBackgroundColor: '#007bff'
                     }]
                 },
+                //opzioni di stile
                 options: {
                     plugins: {
                         legend: {
